# codeboard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  codeboard.py  pyproject.toml
.claude/: check-version-sync.py  settings.json
.github/workflows/: ci.yml
docs/: gen_screenshots.py  zhihu-article.md
tests/: test_codeboard.py
